force-app/main/default/objects/Product2/fields/cgcloud__Bill_Of_Material_Header_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Bill_Of_Material_Header_Code__c</fullName>
    <description>Holds the Header code of the product, if it is a BOM component. For standard products the field will be empty.</description>
    <label>BOM Material Id</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>