force-app/main/default/objects/Product2/fields/cgcloud__Consumer_Goods_External_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consumer_Goods_External_Product_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Holds the unique external id.</description>
    <externalId>true</externalId>
    <label>Consumer Goods External Product ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>