force-app/main/default/objects/Product2/fields/cgcloud__Consumer_Goods_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Consumer_Goods_Product_Code__c</fullName>
    <description>Unique identification of a product.</description>
    <externalId>true</externalId>
    <label>Consumer Goods Product Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>