force-app/main/default/objects/Product2/fields/cgcloud__Container_Size__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Container_Size__c</fullName>
    <description>Describes the numeric value for Container Size.</description>
    <label>Container Size</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>