force-app/main/default/objects/Product2/fields/cgcloud__Container_Size_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Container_Size_Unit__c</fullName>
    <description>Describes the unit of Container Size.</description>
    <label>Container Size Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>oz</fullName>
            </value>
            <value>
                <fullName>l</fullName>
            </value>
            <value>
                <fullName>ml</fullName>
            </value>
            <value>
                <fullName>gal</fullName>
            </value>
            <value>
                <fullName>m³</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>