force-app/main/default/objects/Product2/fields/cgcloud__Container_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Container_Type__c</fullName>
    <description>Describes the type of container of the product.</description>
    <label>Container Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Can</fullName>
            </value>
            <value>
                <fullName>Bottle</fullName>
            </value>
            <value>
                <fullName>Plastic</fullName>
            </value>
            <value>
                <fullName>Glass</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>