force-app/main/default/objects/Product2/fields/cgcloud__Criteria_Text_1__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Criteria_Text_1__c</fullName>
    <description>Holds the Criteria in a text form.</description>
    <inlineHelpText>Improve loading performance of product for the filter criteria which  falls in non groupable filter category</inlineHelpText>
    <label>Criteria_Text_1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>