force-app/main/default/objects/Product2/fields/cgcloud__Criterion_1_Product_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Criterion_1_Product_Description__c</fullName>
    <description>Product Description belonging to Criterion_1_Product.</description>
    <formula>cgcloud__Criterion_1_Product__r.cgcloud__Description_1__c</formula>
    <label>Criterion 1 Product Description</label>
    <type>Text</type>
</CustomField>