force-app/main/default/objects/Product2/fields/cgcloud__Criterion_2_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Criterion_2_Product_Code__c</fullName>
    <description>Product Code belonging to Criterion_2_Product.</description>
    <formula>cgcloud__Criterion_2_Product__r.cgcloud__Consumer_Goods_Product_Code__c</formula>
    <label>Criterion 2 Product Code</label>
    <type>Text</type>
</CustomField>