force-app/main/default/objects/Product2/fields/cgcloud__Custom_Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Custom_Sort__c</fullName>
    <description>Can be used to customize the sort order of products.</description>
    <inlineHelpText>Field reserved for sorting in product listings</inlineHelpText>
    <label>Custom Sort</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>