force-app/main/default/objects/Product2/fields/cgcloud__Description_1_Language_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description_1_Language_2__c</fullName>
    <description>Holds the first description of language 2.</description>
    <label>Description 1 Language 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>