force-app/main/default/objects/Product2/fields/cgcloud__Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Estimated_Value__c</fullName>
    <description>Holds the estimated value of the asset.</description>
    <label>Estimated Value</label>
    <length>80</length>
    <type>Text</type>
</CustomField>