force-app/main/default/objects/Product2/fields/cgcloud__Field_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Field_Valid_From__c</fullName>
    <description>Field status valid from date.</description>
    <label>Field Valid From</label>
    <type>Date</type>
</CustomField>