force-app/main/default/objects/Product2/fields/cgcloud__Fund_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Valid_From__c</fullName>
    <description>Fund Role status valid from date.</description>
    <label>Fund Valid From</label>
    <type>Date</type>
</CustomField>