force-app/main/default/objects/Product2/fields/cgcloud__Fund_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Fund_Valid_Thru__c</fullName>
    <description>Fund Role status valid thru date.</description>
    <label>Fund Valid Thru</label>
    <type>Date</type>
</CustomField>