force-app/main/default/objects/Product2/fields/cgcloud__GTIN__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__GTIN__c</fullName>
    <description>UPC number.</description>
    <label>GTIN</label>
    <length>40</length>
    <type>Text</type>
</CustomField>