force-app/main/default/objects/Product2/fields/cgcloud__Height__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Height__c</fullName>
    <description>Holds the height of the asset.</description>
    <label>Height</label>
    <length>80</length>
    <type>Text</type>
</CustomField>