force-app/main/default/objects/Product2/fields/cgcloud__Is_Bill_Of_Material__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Is_Bill_Of_Material__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean flag to identify BOM products.</description>
    <label>IsBOM</label>
    <type>Checkbox</type>
</CustomField>