force-app/main/default/objects/Product2/fields/cgcloud__Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manufacturer__c</fullName>
    <description>Holds the name of the manufacturer.</description>
    <label>Manufacturer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>