force-app/main/default/objects/Product2/fields/cgcloud__Manufacturer_Item_Number__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Manufacturer_Item_Number__c</fullName>
    <description>Holds the number assigned to the manufacturer.</description>
    <label>Manufacturer Item Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>