force-app/main/default/objects/Product2/fields/cgcloud__New_Item_Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__New_Item_Valid_From__c</fullName>
    <description>New Item status valid from date.</description>
    <label>New Item Valid From</label>
    <type>Date</type>
</CustomField>