force-app/main/default/objects/Product2/fields/cgcloud__New_Item_Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__New_Item_Valid_Thru__c</fullName>
    <defaultValue>date(12,31,2099)</defaultValue>
    <description>New Item status valid thru date.</description>
    <label>New Item Valid Thru</label>
    <type>Date</type>
</CustomField>