force-app/main/default/objects/Product2/fields/cgcloud__Order_Ability__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Order_Ability__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is an &quot;apex roll up summary field&quot; to identify the Order able products only. Order Able products are identified by the units of measure which have Order Ability set to true.</description>
    <label>Order Ability</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>