force-app/main/default/objects/Product2/fields/cgcloud__Pack_Size__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pack_Size__c</fullName>
    <description>Describes the numeric value for Product Pack Size.</description>
    <label>Pack Size</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>