force-app/main/default/objects/Product2/fields/cgcloud__Pack_Size_Unit__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Pack_Size_Unit__c</fullName>
    <description>Describes the unit of the product pack size.</description>
    <label>Pack Size Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>pk</fullName>
            </value>
            <value>
                <fullName>box</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>