force-app/main/default/objects/Product2/fields/cgcloud__Power_Supply_Connected__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Power_Supply_Connected__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies whether the asset requires connection to a power supply.</description>
    <label>Power Supply Connected</label>
    <type>Checkbox</type>
</CustomField>