force-app/main/default/objects/Product2/fields/cgcloud__Product_Short_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Product_Short_Code__c</fullName>
    <description>Additional short product identifier.</description>
    <label>Product Short Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>