force-app/main/default/objects/Product2/fields/cgcloud__Rounding_Rule_Validation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Rounding_Rule_Validation__c</fullName>
    <description>This is an &quot;apex roll up summary field&quot;. Internally required.</description>
    <label>Rounding Rule Validation</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>