force-app/main/default/objects/Product2/fields/cgcloud__Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sales_Org__c</fullName>
    <description>Describes the sales org which the product belongs to.</description>
    <formula>TEXT(cgcloud__Product_Template__r.cgcloud__Sales_Org__c)</formula>
    <label>Sales Org</label>
    <type>Text</type>
</CustomField>