force-app/main/default/objects/Product2/fields/cgcloud__Sell_Out_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sell_Out_Code__c</fullName>
    <description>Holds the Sell Out Code of the product.</description>
    <label>Sell Out Code</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>