force-app/main/default/objects/Product2/fields/cgcloud__Short_Description_Language_2__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Short_Description_Language_2__c</fullName>
    <description>Holds the short description of language 2.</description>
    <label>Short Description Language 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>