force-app/main/default/objects/Product2/fields/cgcloud__Short_Description_Language_3__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Short_Description_Language_3__c</fullName>
    <description>Holds the short description of language 3.</description>
    <label>Short Description Language 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>