force-app/main/default/objects/Product2/fields/cgcloud__Size__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Size__c</fullName>
    <description>Holds the size of the asset.</description>
    <label>Size</label>
    <length>80</length>
    <type>Text</type>
</CustomField>