force-app/main/default/objects/Product2/fields/cgcloud__Tax_Classification__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Tax_Classification__c</fullName>
    <description>Tax classification of the product.</description>
    <label>Tax Classification</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>n</fullName>
            </value>
            <value>
                <fullName>r</fullName>
            </value>
            <value>
                <fullName>f</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>