force-app/main/default/objects/Product2/fields/cgcloud__Transfer_Record_Identifier__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Transfer_Record_Identifier__c</fullName>
    <label>Planning Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>