force-app/main/default/objects/Product2/fields/cgcloud__Weight__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Weight__c</fullName>
    <description>Holds the weight of the asset.</description>
    <label>Weight</label>
    <length>80</length>
    <type>Text</type>
</CustomField>