force-app/main/default/objects/Product2/recordTypes/Product_Record_Page.recordType-meta.xml
<RecordType>
    <fullName>Product_Record_Page</fullName>
    <active>true</active>
    <label>Product Record Page</label>
</RecordType>